--- a/AlternatingColorCart/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/AlternatingColorCart/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -4,7 +4,7 @@
   <div class="{% if showQuantitySelect %}col-8{% else %}col-12{% endif %}">
       {% block page_product_detail_buy_button %}
           <div class="d-grid">
-              <button class="btn btn-primary btn-buy"
+              <button class="btn btn-primary btn-buy btn-details-buy"
                       title="{{ "detail.addProduct"|trans|striptags }}"
                       aria-label="{{ "detail.addProduct"|trans|striptags }}">
                   {{ "detail.addProduct"|trans|sw_sanitize }}
