--- a/AlternatingColorCart/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/AlternatingColorCart/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -1,13 +1,18 @@
 {% sw_extends '@Storefront/storefront/page/product-detail/buy-widget-form.html.twig' %}
 
+
+
 {% block page_product_detail_buy_button_container %}
   <div class="{% if showQuantitySelect %}col-8{% else %}col-12{% endif %}">
       {% block page_product_detail_buy_button %}
           <div class="d-grid">
               <button class="btn btn-primary btn-buy btn-details-buy"
                       title="{{ "detail.addProduct"|trans|striptags }}"
-                      aria-label="{{ "detail.addProduct"|trans|striptags }}">
-                  {{ "detail.addProduct"|trans|sw_sanitize }}
+                      aria-label="{{ "detail.addProduct"|trans|striptags }}"
+                      data-color-change-options = '{
+                        "timeOutMilliSec": "{{ shopware.theme.timeOutMillisec }}"
+                      }'
+                      >{{ "detail.addProduct"|trans|sw_sanitize }}
               </button>
           </div>
       {% endblock %}
