--- a/AlternatingColorCart/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/AlternatingColorCart/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -1,6 +1,8 @@
 {% sw_extends '@Storefront/storefront/page/product-detail/buy-widget-form.html.twig' %}
 
-
+{% set pluginOptions = {
+  timeOutMillisec: theme_config('timeOutMillisec')
+} %}
 
 {% block page_product_detail_buy_button_container %}
   <div class="{% if showQuantitySelect %}col-8{% else %}col-12{% endif %}">
@@ -9,10 +11,9 @@
               <button class="btn btn-primary btn-buy btn-details-buy"
                       title="{{ "detail.addProduct"|trans|striptags }}"
                       aria-label="{{ "detail.addProduct"|trans|striptags }}"
-                      data-color-change-options = '{
-                        "timeOutMilliSec": "{{ shopware.theme.timeOutMillisec }}"
-                      }'
-                      >{{ "detail.addProduct"|trans|sw_sanitize }}
+                      data-color-change-options = '{{ pluginOptions|json_encode }}'
+                      >
+                  {{ "detail.addProduct"|trans|sw_sanitize }}
               </button>
           </div>
       {% endblock %}
