reworked plugin to overwrite, add lang snippets

--- a/AlternatingColorCart/src/Resources/app/storefront/src/scss/base.scss
+++ b/AlternatingColorCart/src/Resources/app/storefront/src/scss/base.scss
@@ -1,9 +1,9 @@
-.btn-details-buy {
+.btn-buy {
   background-color: $btnColorTimerOver;
   border-color: $btnColorTimerOver;
 }
 
-.btn-details-buy:hover {
+.btn-buy:hover {
   background-color: $btnColorAddToCart;
   border-color: $btnColorAddToCart;
 }
